--- a/Trabalho.html
+++ b/Trabalho.html
@@ -8,6 +8,10 @@
 <body>
     <script>
         
+        function mostraMedia(media){
+            alert(`A média é ${media.toFixed(2)}`)
+        }
+
     </script>
 </body>
 </html>
